# flightSimulator

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  DOCUMENTATION.md  Makefile  README.md
data/: aircraftData.txt
gameDev/include/: aircraftData.h  logger.h  matrix3.h  vector3.h
gameDev/src/: 2Drenderer.c  aircraftData.c  main.c  matrix3.c  vector3.c
include/: 2Drenderer.h  aircraft.h  aircraftData.h  controls.h  menu.h  physics.h  textRenderer.h  utils.h  weather.h
src/: 2Drenderer.c  aircraft.c  aircraftData.c  controls.c  logger.c  main.c  menu.c  physics.c  textRenderer.c  utils.c  weather.c
webDev/: README.md  composer.json  router.php
webDev/api/: adminSchoolAjax.php  headerAjax.php
webDev/assets/constants/: constants.js  constants.json  constants.php
webDev/assets/css/: footer.css  header.css  landingPage.css  loginPage.css  registerPage.css  schoolAdminPage.css  theme.css
webDev/assets/js/: adminSchool.js  header.js
webDev/assets/js/utils/: ajaxHandler.js
webDev/config/: Database.php  db.php
webDev/docs/: CHANGELOG.md  docStandards.md
webDev/pages/: actionScript.php  auth.php  login.php  register.php
webDev/php/: Bootstrap.php  auth.php  blablabla.php  login.php  logout.php  register.php
webDev/php/Functions/: AppException.php  Auth.php  CSRF.php  Logger.php  RoleManager.php  Table.php  TableRenderer.php  actionScript.php
webDev/php/functions/: actionScript.php  tableFunctions.php
webDev/php/includes/: footer.php  header.php
webDev/public/: adminPage.php  adminSchoolPage.php  index.php
webDev/src/: Bootstrap.php
webDev/src/API/: ApiResponse.php
webDev/src/Auth/: Auth.php  CSRF.php  User.php  UserAgent.php
webDev/src/Database/: Database.php  Table.php
webDev/src/Database/Enum/: Role.php  Status.php
webDev/src/Exception/: APIException.php  AppException.php  AuthenticationException.php  AuthorizationException.php  ConfigurationException.php  DatabaseException.php  FileException.php  LogicException.php  NullException.php  PHPException.php  ServerException.php  UserException.php  ValidationException.php
webDev/src/Exception/Enum/: AuthenticationType.php  ExceptionType.php  ValidationFailureType.php
webDev/src/Logging/: ConsoleLogger.php  FileLogger.php  Logger.php  LoggerColour.php
webDev/src/Logging/Enum/: LogColours.php  LogLevel.php  LoggerType.php  Loggers.php  TextStyle.php
webDev/src/UI/: TableRenderer.php
webDev/src/Utilities/: RoleManager.php
webDev/templates/: footer.php  header.php
